--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,20 @@
   "name": "rachio-ditch-sensor",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "./dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm-run-all --parallel open:src lint:watch",
+    "open:src": "NODE_ENV=development nodemon --exec babel-node ./src/server.js",
+    "open:dist": "NODE_ENV=production pm2 start --no-daemon dist/server.js",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "rimraf ./dist",
+    "prebuild": "npm run clean-dist",
+    "build": "babel src -d dist",
+    "flow": "flow",
+    "lint": "esw src --color",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "jest --coverage",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Nathan Fiscus",
   "license": "ISC",
@@ -16,6 +27,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.2",
     "method-override": "^2.3.10",
@@ -23,5 +35,35 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rachio": "^0.1.2"
+  },
+  "devDependencies": {
+    "babel-cli": "6.24.1",
+    "babel-eslint": "7.2.3",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.4.0",
+    "babel-preset-flow": "6.23.0",
+    "chai": "3.5.0",
+    "cross-env": "5.0.5",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb-base": "11.1.3",
+    "eslint-plugin-flowtype": "2.32.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-watch": "3.1.0",
+    "flow-bin": "0.43.1",
+    "glob": "7.1.1",
+    "istanbul": "0.4.5",
+    "jest": "19.0.2",
+    "js-yaml": "3.11.0",
+    "minimist": "1.2.0",
+    "nodemon": "1.11.0",
+    "npm-run-all": "4.0.2",
+    "pretty-format": "21.2.1",
+    "request": "2.85.0",
+    "request-promise": "4.2.2",
+    "rimraf": "2.6.1",
+    "semver": "5.5.0",
+    "sequelize-cli": "2.7.0",
+    "shelljs": "0.8.1",
+    "snake-case": "2.1.0"
   }
 }
