change to a float sensor

--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,7 @@
   "author": "Nathan Fiscus",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "connect-ensure-login": "^0.1.1",
@@ -31,16 +31,16 @@
     "helmet": "^3.12.1",
     "jsonwebtoken": "^8.2.2",
     "method-override": "^2.3.10",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rachio": "^0.1.2"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "7.2.3",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.4.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "6.23.0",
     "chai": "3.5.0",
     "cross-env": "5.0.5",
@@ -53,12 +53,12 @@
     "glob": "7.1.1",
     "istanbul": "0.4.5",
     "jest": "19.0.2",
-    "js-yaml": "3.11.0",
+    "js-yaml": "^3.13.1",
     "minimist": "1.2.0",
-    "nodemon": "1.11.0",
+    "nodemon": "^1.19.1",
     "npm-run-all": "4.0.2",
     "pretty-format": "21.2.1",
-    "request": "2.85.0",
+    "request": "^2.88.0",
     "request-promise": "4.2.2",
     "rimraf": "2.6.1",
     "semver": "5.5.0",
